# kiwify-automation

./: .env_example  .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
src/: config.py  config_example.py  main.py
src/pages/: base_page.py  course.py  logging.py
